--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.22.1",
+    "node-fetch": "^2.6.7",
     "pg": "^8.11.3"
   }
 }
